; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_tests.c_test_index_tests__honors_protect_filesystems.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_tests.c_test_index_tests__honors_protect_filesystems.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"invalid\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"./invalid\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"core.protectHFS\00", align 1
@.str.3 = private unnamed_addr constant [17 x i8] c"core.protectNTFS\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c".git./hello\00", align 1
@.str.5 = private unnamed_addr constant [14 x i8] c".git\E2\80\AD/hello\00", align 1
@.str.6 = private unnamed_addr constant [12 x i8] c"git~1/hello\00", align 1
@.str.7 = private unnamed_addr constant [14 x i8] c".git\E2\81\AF/hello\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_index_tests__honors_protect_filesystems() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32 @p_mkdir(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 448)
  %3 = call i32 @git_repository_init(i32** %1, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 0)
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32*, i32** %1, align 8
  %6 = call i32 @cl_repo_set_bool(i32* %5, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0), i32 1)
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @cl_repo_set_bool(i32* %7, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0), i32 1)
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @write_invalid_filename(i32* %9, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0))
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @write_invalid_filename(i32* %11, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.5, i64 0, i64 0))
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @write_invalid_filename(i32* %13, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.6, i64 0, i64 0))
  %15 = load i32*, i32** %1, align 8
  %16 = call i32 @write_invalid_filename(i32* %15, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.7, i64 0, i64 0))
  %17 = load i32*, i32** %1, align 8
  %18 = call i32 @git_repository_free(i32* %17)
  %19 = call i32 @cl_fixture_cleanup(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @p_mkdir(i8*, i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_init(i32**, i8*, i32) #1

declare dso_local i32 @cl_repo_set_bool(i32*, i8*, i32) #1

declare dso_local i32 @write_invalid_filename(i32*, i8*) #1

declare dso_local i32 @git_repository_free(i32*) #1

declare dso_local i32 @cl_fixture_cleanup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
